[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/img/Randomized-Pattern (1).png" type="Texture" id=2]
[ext_resource path="res://Assets/img/graph.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 58
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.231373, 0.839216, 0.141176, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.631373, 0.52549, 0.0862745, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.643137, 0.121569, 0.121569, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color( 0, 0, 0, 0.290196 )

[sub_resource type="DynamicFont" id=7]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.85098, 0.364706, 0.0588235, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 574.571, 560.376 )
scale = Vector2( 59.113, 64.2358 )
z_index = -2
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 133.395, 107.367 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
editor/display_folded = true
margin_left = 27.396
margin_top = -79.4178
margin_right = 67.396
margin_bottom = -39.4178

[node name="Label" type="Label" parent="Control"]
margin_left = 260.0
margin_top = 171.0
margin_right = 469.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "GRAPH"
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="Control"]
margin_left = 249.0
margin_top = 216.0
margin_right = 546.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 2 )
text = "GAME"
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="Control"]
margin_left = 177.0
margin_top = 255.0
margin_right = 259.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 3 )
text = "THE"
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 133.567
margin_top = 361.153
margin_right = 453.567
margin_bottom = 461.153
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "SEJARAH"

[node name="Button2" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 133.567
margin_top = 491.969
margin_right = 453.567
margin_bottom = 591.969
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "GRAPH DASAR"

[node name="Button3" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 134.008
margin_top = 628.685
margin_right = 454.008
margin_bottom = 728.685
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "BENTUK GRAPH"

[node name="Button4" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 136.658
margin_top = 761.909
margin_right = 456.658
margin_bottom = 861.909
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "TREE"

[node name="Button5" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 483.0
margin_top = 16.0
margin_right = 556.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 7 )
text = "?"

[node name="Button6" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 136.658
margin_top = 893.909
margin_right = 456.658
margin_bottom = 993.909
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "QUIZ"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
